--- a/app/styles/page.less
+++ b/app/styles/page.less
@@ -61,7 +61,45 @@ body {
       }
     }
   }
+}
 
+body {
+  &.t1 {
+    .bg {
+      background: url(../images/2.jpg) no-repeat right bottom;
+      background-size: cover;
+      &:after {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        content: '';
+        display: block;
+        background: rgba(0, 0, 0, 0.3);
+      }
+      img {
+        display: none;
+      }
+    }
+    .content {
+      background: rgba(0, 0, 0, 0.5);
+      border-radius: 0;
+      color: #fff;
+      h1 {
+        color: #fff;
+      }
+      p {
+        color: #ddd;
+      }
+    }
+
+    .social-icons {
+      li a {
+        color: #ddd;
+      }
+    }
+  }
 }
 
 @media (max-width: 992px) {
