--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -10772,7 +10772,14 @@ body {
   bottom: 0;
 }
 body {
-  overflow: hidden;
+  background: #efefea;
+  font-family: "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .bg {
   position: fixed;
@@ -10824,16 +10831,6 @@ body.t1 .bg {
   background: url(../images/2.jpg) no-repeat right bottom;
   background-size: cover;
 }
-body.t1 .bg:after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  content: '';
-  display: block;
-  background: rgba(0, 0, 0, 0.3);
-}
 body.t1 .bg img {
   display: none;
 }
@@ -10854,9 +10851,17 @@ body.t1 .social-icons li a {
 @media (max-width: 992px) {
   .content {
     position: absolute;
-    left: 30px;
-    right: 30px;
+    left: 20px;
+    right: 20px;
+    padding: 20px;
     width: auto;
+    background: rgba(234, 234, 223, 0.76);
+  }
+  .content p {
+    font-size: 16px;
+  }
+  .content h1 {
+    margin-top: 20px;
   }
 }
 /*# sourceMappingURL=/styles/main.css.map */
