--- a/app/styles/page.less
+++ b/app/styles/page.less
@@ -7,7 +7,12 @@
 }
 
 body {
-  overflow: hidden;
+  background: #efefea;
+  font-family: "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h1, h2, h3, h4 {
+  font-family: "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .bg {
@@ -68,16 +73,6 @@ body {
     .bg {
       background: url(../images/2.jpg) no-repeat right bottom;
       background-size: cover;
-      &:after {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        content: '';
-        display: block;
-        background: rgba(0, 0, 0, 0.3);
-      }
       img {
         display: none;
       }
@@ -103,10 +98,21 @@ body {
 }
 
 @media (max-width: 992px) {
+  .page {
+
+  }
   .content {
     position: absolute;
-    left: 30px;
-    right: 30px;
+    left: 20px;
+    right: 20px;
+    padding: 20px;
     width: auto;
+    background: rgba(234, 234, 223, 0.76);
+    p {
+      font-size: 16px;
+    }
+    h1 {
+      margin-top: 20px;
+    }
   }
 }
